sort results, add progress bars, add prompt text, fix some category labels

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,13 +20,16 @@
   </head>
   <body>
     <div class="container my-5" style="max-width: 600px">
-      <h1 class="fw-semibold">Spiritual gifts survey</h1>
+      <h1 class="fw-bold">Spiritual gifts survey</h1>
+      <div class="fw-medium">Respond to each question with how well these statements describe you, from 1 (not you at all) to 10 (very much you).</div>
       <div id="qcontainer"></div>
 
-      <hr class="my-5">
+      <hr class="my-5" />
       <button id="btnSubmit" class="btn btn-primary">Tally results</button>
-      <div id="results">
+      <div id="results" class="mt-3">
+        <div>
 
+        </div>
       </div>
     </div>
 
