autoscroll, save progress

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="container my-5" style="max-width: 600px">
       <h1 class="fw-bold">Spiritual gifts survey</h1>
       <div class="fw-medium">Respond to each question with how well these statements describe you, from 1 (not you at all) to 10 (very much you).</div>
+      <div class="text-end"><button class="btn btn-sm btn-light" id="btnClear">Clear responses</button></div>
+      
       <div id="qcontainer"></div>
 
       <hr class="my-5" />
