--- a/index.html
+++ b/index.html
@@ -21,19 +21,43 @@
   <body>
     <div class="container my-5" style="max-width: 600px">
       <h1 class="fw-bold">Spiritual gifts survey</h1>
-      <div class="fw-medium">Respond to each question with how well these statements describe you, from 1 (not you at all) to 10 (very much you).</div>
-      <div class="text-end"><button class="btn btn-sm btn-light" id="btnClear">Clear responses</button></div>
-      
+      <div class="fw-medium">
+        Respond to each question with how well these statements describe you,
+        from 1 (not you at all) to 10 (very much you).
+      </div>
+      <div class="text-end">
+        <button class="btn btn-sm btn-light" id="btnClear">
+          Clear responses
+        </button>
+      </div>
+
       <div id="qcontainer"></div>
 
       <hr class="my-5" />
       <button id="btnSubmit" class="btn btn-primary">Tally results</button>
       <div id="results" class="mt-3">
-        <div>
-
-        </div>
+        <div></div>
       </div>
     </div>
+
+    <footer class="footer position-fixed mt-auto bg-light w-100 pt-3" style="bottom:0; height: 45px;">
+      <div class="container">
+        <div class="progress">
+          <div
+            class="progress-bar bg-primary text-nowrap"
+            role="progressbar"
+            style="width: 0%"
+            id="mainprogressbar"
+          ></div>
+          <div
+            class="justify-content-center align-self-center d-flex position-absolute w-100 fs-6 fw-medium"
+            id="mainprogresstext"
+          >
+            0/140
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
