fix progress bar visuals

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <footer class="footer position-fixed mt-auto bg-light w-100 pt-3" style="bottom:0; height: 45px;">
-      <div class="container">
+      <div class="container w-75">
         <div class="progress">
           <div
             class="progress-bar bg-primary text-nowrap"
@@ -50,7 +50,7 @@
             id="mainprogressbar"
           ></div>
           <div
-            class="justify-content-center align-self-center d-flex position-absolute w-100 fs-6 fw-medium"
+            class="justify-content-center align-self-center d-flex w-75 position-absolute fs-6 fw-medium"
             id="mainprogresstext"
           >
             0/140
