--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
     <div class="container my-5" style="max-width: 600px">
       <h1 class="fw-bold">Spiritual gifts survey</h1>
       <div class="fw-medium">
+        <p>
         Respond to each question with how well these statements describe you,
         from 1 (not you at all) to 10 (very much you).
+        </p>
+        <p>
+            Your answers are automatically saved locally on your device, in case you need to pause and continue at a later time!
+        </p>
       </div>
       <div class="text-end">
-        <button class="btn btn-sm btn-light" id="btnClear">
+        <button class="btn btn-sm btn-light mt-2" id="btnClear">
           Clear responses
         </button>
       </div>
@@ -53,7 +58,7 @@
             class="justify-content-center align-self-center d-flex w-75 position-absolute fs-6 fw-medium"
             id="mainprogresstext"
           >
-            0/140
+            
           </div>
         </div>
       </div>
