--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container my-5" style="max-width: 600px">
+    <div class="container mx-auto" style="max-width: 600px; width: 95%;">
       <h1 class="fw-bold">Spiritual gifts survey</h1>
       <div class="fw-medium">
         <p>
@@ -38,14 +38,14 @@
 
       <div id="qcontainer"></div>
 
-      <hr class="my-5" />
-      <button id="btnSubmit" class="btn btn-primary">Tally results</button>
+      <!-- <hr class="my-5" /> -->
+      <button id="btnSubmit" class="btn btn-primary mt-5">Tally results</button>
       <div id="results" class="mt-3">
         <div></div>
       </div>
     </div>
 
-    <footer class="footer position-fixed mt-auto bg-light w-100 pt-3" style="bottom:0; height: 45px;">
+    <footer class="footer position-fixed mt-auto bg-light pt-3 w-100" style="bottom:0; height: 45px;">
       <div class="container w-75">
         <div class="progress">
           <div
