Clickable Progress bars with expandable info
Thanks chatgpt

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="survey_questions.js"></script>
+    <script src="survey_categories.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
