--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           you need to pause and continue at a later time!
         </p>
       </div>
-      <div class="text-end">
-        <button class="btn btn-sm btn-light mt-2" id="btnClear">
+      <div class="text-end mt-2">
+        <a class="btn btn-sm btn-secondary mx-2 d-none" href="./masterlife.pdf" target="_blank" id="btn_pdf">View original PDF</a>
+        <button class="btn btn-sm btn-light mx-2" id="btnClear">
           Clear responses
         </button>
       </div>
